Bug 1592243 - Fix diacritics truncation in network blocking panel r=Honza
The use of `--monospace-font-family` on Windows truncated the bottom
 part of diacritics in Network Blocking Panel.
 Using the default variable-width font not only fixes this issue but
 also allows user to view more characters per line which is especially
 beneficial for longer URL

Differential Revision: https://phabricator.services.mozilla.com/D66862

UltraBlame original commit: 9f58bd341b2f53ac6f692586991a2659240d0a0c

--- a/devtools/client/netmonitor/src/assets/styles/RequestBlockingPanel.css
+++ b/devtools/client/netmonitor/src/assets/styles/RequestBlockingPanel.css
@@ -1,26 +1,32 @@
 .
-network
--
-monitor
-.
 request
 -
 blocking
 -
 panel
 {
-overflow
-:
-hidden
-;
 position
 :
 relative
+;
+display
+:
+flex
+;
+flex
+-
+direction
+:
+column
 ;
 height
 :
 100
 %
+;
+overflow
+:
+hidden
 ;
 }
 .
@@ -150,10 +156,6 @@ cursor
 text
 }
 .
-network
--
-monitor
-.
 request
 -
 blocking
@@ -162,6 +164,10 @@ enable
 -
 bar
 {
+flex
+:
+none
+;
 background
 :
 var
@@ -208,10 +214,6 @@ inline
 16px
 4px
 ;
-display
-:
-flex
-;
 align
 -
 items
@@ -247,45 +249,6 @@ color
 ;
 }
 .
-network
--
-monitor
-.
-request
--
-blocking
--
-list
-.
-disabled
-{
-background
--
-color
-:
-var
-(
--
--
-theme
--
-toolbar
--
-hover
-)
-;
-opacity
-:
-0
-.
-6
-;
-}
-.
-network
--
-monitor
-.
 request
 -
 blocking
@@ -301,10 +264,6 @@ grow
 1
 ;
 }
-.
-network
--
-monitor
 .
 request
 -
@@ -349,37 +308,11 @@ blocking
 -
 contents
 {
-position
-:
-absolute
-;
-bottom
+flex
 :
 0
-;
-top
-:
-calc
-(
-var
-(
--
--
-theme
--
-toolbar
--
-height
-)
-+
-1px
-)
-;
-inset
--
-inline
-:
-0
+1
+auto
 ;
 overflow
 -
@@ -387,11 +320,24 @@ y
 :
 auto
 ;
-}
-.
-network
+border
 -
-monitor
+bottom
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+}
 .
 request
 -
@@ -408,16 +354,38 @@ padding
 4px
 0
 ;
-width
-:
-100
-%
-;
 }
 .
-network
+request
 -
-monitor
+blocking
+-
+list
+.
+disabled
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+toolbar
+-
+hover
+)
+;
+opacity
+:
+0
+.
+6
+;
+}
 .
 request
 -
@@ -450,10 +418,6 @@ inline
 8px
 ;
 }
-.
-network
--
-monitor
 .
 request
 -
@@ -488,6 +452,29 @@ request
 blocking
 -
 list
+li
+.
+request
+-
+blocking
+-
+edit
+-
+item
+form
+{
+width
+:
+100
+%
+;
+}
+.
+request
+-
+blocking
+-
+list
 .
 devtools
 -
@@ -511,21 +498,6 @@ calc
 %
 -
 20px
-)
-;
-font
--
-family
-:
-var
-(
--
--
-monospace
--
-font
--
-family
 )
 ;
 }
@@ -791,15 +763,15 @@ request
 -
 blocking
 -
-edit
--
-item
-form
+footer
 {
-width
+position
 :
-100
-%
+relative
+;
+flex
+:
+none
 ;
 }
 .
@@ -807,26 +779,32 @@ request
 -
 blocking
 -
-add
--
-form
+footer
+:
+:
+after
 {
-border
--
+content
+:
+"
+"
+;
+position
+:
+absolute
+;
+left
+:
+0
+;
+right
+:
+0
+;
 top
 :
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
+100
+%
 ;
 border
 -
@@ -844,26 +822,6 @@ splitter
 -
 color
 )
-;
-}
-.
-request
--
-blocking
--
-add
--
-form
-:
-first
--
-child
-{
-border
--
-top
-:
-none
 ;
 }
 .
